Complete jquery fellowship

--- a/lotr_homework/css/style.css
+++ b/lotr_homework/css/style.css
@@ -160,6 +160,11 @@ aside ul {
   width: 20%;
 }
 
+.the-white {
+  background: white;
+  border: 1px solid grey;
+}
+
 
 
 /*===========================================================*/
